feat: init project & create service file

--- a/service/package.json
+++ b/service/package.json
@@ -1,18 +1,13 @@
 {
-    "name": "template-typescript",
+    "name": "nia-images-api-service",
     "version": "1.0.0",
-    "description": "ts项目模板",
+    "description": "nia-images-api-service",
     "main": "src/app.ts",
-    "repository": "https://github.com/alongw/template-typescript",
+    "repository": "https://github.com/alongw/nia-images",
     "author": "alongw <alongw@alongw.cn>",
     "license": "AGPL-3.0",
     "scripts": {
-        "prepare": "husky install",
-        "cz": "git-cz",
-        "pushall": "yarn lint && git add . && yarn cz && git push",
-        "push": "yarn lint && yarn cz && git push",
         "lint": "eslint .",
-        "format": "prettier --write --cache .",
         "start": "yarn lint && npx ts-node src/app.ts",
         "dev": "npx nodemon src/app.ts",
         "build": "npx eslint . && npx ts-node ./script/build.ts",
@@ -21,19 +16,13 @@
         "build:lint": "npx eslint . && npx ts-node ./script/build.ts"
     },
     "devDependencies": {
-        "@commitlint/cli": "^17.6.5",
-        "@commitlint/config-angular": "^17.6.5",
-        "@commitlint/cz-commitlint": "^17.5.0",
         "@types/node": "^20.4.0",
         "@types/shelljs": "^0.8.12",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
-        "commitizen": "^4.3.0",
         "eslint": "^8.44.0",
-        "husky": "^8.0.0",
         "lint-staged": "^13.2.2",
         "nodemon": "^2.0.22",
-        "prettier": "^2.8.8",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.3"
     },
