--- a/service/package.json
+++ b/service/package.json
@@ -16,6 +16,7 @@
         "build:lint": "npx eslint . && npx ts-node ./script/build.ts"
     },
     "devDependencies": {
+        "@types/express": "^4.17.18",
         "@types/node": "^20.4.0",
         "@types/shelljs": "^0.8.12",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
@@ -29,12 +30,8 @@
     "lint-staged": {
         "*.{vue,js,ts,jsx,tsx,md,json}": "prettier --write"
     },
-    "config": {
-        "commitizen": {
-            "path": "@commitlint/cz-commitlint"
-        }
-    },
     "dependencies": {
+        "express": "^4.18.2",
         "log4js": "^6.9.1",
         "shelljs": "^0.8.5"
     }
