--- a/service/config.yaml
+++ b/service/config.yaml
@@ -8,3 +8,13 @@ db:
   user: nia-img-dev
   password: 4GZ3ewijdbYpiD2K
   database: nia-img-dev
+
+# jwt 相关配置
+jwt:
+  secret: b07876c1a995034912c415f249b05dc5
+  unless:
+    - /public
+    - /login
+
+# base url
+baseUrl: /api
