--- a/service/package.json
+++ b/service/package.json
@@ -6,14 +6,18 @@
     "repository": "https://github.com/alongw/nia-images",
     "author": "alongw <alongw@alongw.cn>",
     "license": "AGPL-3.0",
+    "type": "module",
     "scripts": {
         "lint": "eslint .",
-        "start": "yarn lint && npx ts-node src/app.ts",
-        "dev": "npx nodemon src/app.ts",
+        "format": "prettier --write --cache .",
+        "dev": "nodemon -x node --no-warnings --experimental-specifier-resolution=node --loader ts-node/esm src/app.ts",
         "build": "npx eslint . && npx ts-node ./script/build.ts",
         "build:nolint": "npx ts-node ./script/build.ts",
         "build:tsc": "npx tsc",
-        "build:lint": "npx eslint . && npx ts-node ./script/build.ts"
+        "build:lint": "npx eslint . && npx ts-node ./script/build.ts",
+        "start": "yarn start:ts",
+        "start:ts": "ts-node-esm --experimental-specifier-resolution=node src/app.ts",
+        "start:node": "node --es-module-specifier-resolution=node dist/app.js"
     },
     "devDependencies": {
         "@types/express": "^4.17.18",
@@ -31,8 +35,13 @@
         "*.{vue,js,ts,jsx,tsx,md,json}": "prettier --write"
     },
     "dependencies": {
+        "@types/cors": "^2.8.14",
+        "@types/express-jwt": "6.0.4",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
+        "express-jwt": "5.3.3",
         "log4js": "^6.9.1",
+        "mysql2": "^3.6.1",
         "shelljs": "^0.8.5"
     }
 }
