--- a/service/tsconfig.json
+++ b/service/tsconfig.json
@@ -1,18 +1,19 @@
 {
     "compilerOptions": {
-        "allowJs": true,
-        "module": "commonjs",
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "esnext",
-        "noImplicitAny": true,
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "outDir": "dist/tsc",
-        "baseUrl": "src",
-        "typeRoots": ["node_modules/@types"],
-        "types": ["node"],
-        "skipLibCheck": true
+      "allowJs": true,
+      "module": "esnext",
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "target": "esnext",
+      "noImplicitAny": true,
+      "moduleResolution": "node",
+      "sourceMap": true,
+      "outDir": "dist",
+      "baseUrl": "src",
+      "typeRoots": ["node_modules/@types"],
+      "types": ["node"],
+      "skipLibCheck": true
     },
     "include": ["src/**/*"]
-}
+  }
+  
