--- a/service/package.json
+++ b/service/package.json
@@ -21,6 +21,7 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.18",
+        "@types/jsonwebtoken": "8.5.8",
         "@types/node": "^20.4.0",
         "@types/shelljs": "^0.8.12",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
@@ -37,9 +38,11 @@
     "dependencies": {
         "@types/cors": "^2.8.14",
         "@types/express-jwt": "6.0.4",
+        "axios": "^1.5.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-jwt": "5.3.3",
+        "jsonwebtoken": "^9.0.0",
         "log4js": "^6.9.1",
         "mysql2": "^3.6.1",
         "shelljs": "^0.8.5"
