--- a/service/package.json
+++ b/service/package.json
@@ -23,6 +23,7 @@
         "@types/express": "^4.17.18",
         "@types/jsonwebtoken": "8.5.8",
         "@types/node": "^20.4.0",
+        "@types/request": "^2.48.9",
         "@types/shelljs": "^0.8.12",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
@@ -45,6 +46,7 @@
         "jsonwebtoken": "^9.0.0",
         "log4js": "^6.9.1",
         "mysql2": "^3.6.1",
+        "request": "^2.88.2",
         "shelljs": "^0.8.5"
     }
 }
