--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.0",
     "@icon-park/vue-next": "^1.4.2",
+    "@kangc/v-md-editor": "^2.3.17",
     "ant-design-vue": "4.x",
     "axios": "^1.5.1",
     "dynamic-tencent-captcha": "^1.0.2",
+    "markdown-it": "^13.0.2",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -25,6 +27,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.17.17",
+    "@types/prismjs": "^1.26.1",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -37,6 +40,7 @@
     "typescript": "~5.2.0",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
+    "vite-plugin-prismjs": "^0.0.8",
     "vue-tsc": "^1.8.11"
   }
 }
