--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,48 +30,25 @@ jobs:
                   cd ./service
                   yarn install
                   cd ..
-                  cd ./web
-                  yarn install
-                  cd ..
 
             - name: 构建
               run: |
-                  mkdir ./dist
-                  cd ./dist
-                  mkdir ./web
-                  mkdir ./service
-                  cd ..
                   cd ./service
                   yarn build
+                  mv ./dist ./img
                   cd ..
-                  cd ./web
-                  echo 'VITE_HTTP_BASE_URL=${{secrets.BASE_URL}}' >> .env
-                  yarn build
-                  cd ..
-                  cp ./package.json ./dist
-                  cp -r ./service/dist ./dist/service
-                  cp -r ./web/dist ./dist/web
-                  cp ./web/package.json ./dist/web
-                  cp ./service/package.json ./dist/service
-                  cp -r ./service/template ./dist/service
-
-            - name: 上传前端文件
-              uses: actions/upload-artifact@v2
-              with:
-                  name: frontend-build
-                  path: dist/web/
 
             - name: 上传后端文件
               uses: actions/upload-artifact@v2
               with:
                   name: service-build
-                  path: dist/service
+                  path: service/img
 
             - name: 部署后端到服务器
               uses: easingthemes/ssh-deploy@main
               with:
                   SSH_PRIVATE_KEY: ${{ secrets.SERVER_KEY }}
-                  SOURCE: dist/service/
+                  SOURCE: dist/service/img
                   REMOTE_HOST: ${{ secrets.SERVER_HOST }}
                   REMOTE_USER: ${{ secrets.SERVER_USER }}
                   TARGET: ${{secrets.SERVER_PATH}}
