--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -1,4 +1,4 @@
-name: deploy
+name: deploy-web
 
 on:
     workflow_dispatch:
@@ -27,18 +27,19 @@ jobs:
 
             - name: 安装依赖
               run: |
-                  cd ./service
+                  cd ./web
                   yarn install
                   cd ..
 
             - name: 构建
               run: |
-                  cd ./service
+                  cd ./web
+                  echo 'VITE_HTTP_BASE_URL=${{secrets.BASE_URL}}' >> .env
                   yarn build
-                  mv ./dist ./img
+                  cp ./package.json ./dist
                   cd ..
 
-            - name: 上传后端文件
+            - name: 上传前端文件
               uses: actions/upload-artifact@v2
               with:
                   name: service-build
@@ -48,7 +49,7 @@ jobs:
               uses: easingthemes/ssh-deploy@main
               with:
                   SSH_PRIVATE_KEY: ${{ secrets.SERVER_KEY }}
-                  SOURCE: /service/img
+                  SOURCE: /web/dist
                   REMOTE_HOST: ${{ secrets.SERVER_HOST }}
                   REMOTE_USER: ${{ secrets.SERVER_USER }}
                   TARGET: ${{secrets.SERVER_PATH}}
