--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -46,7 +46,7 @@ jobs:
                   name: service-build
                   path: service/img
 
-            - name: 部署后端到服务器
+            - name: 部署前端到服务器
               uses: easingthemes/ssh-deploy@main
               with:
                   SSH_PRIVATE_KEY: ${{ secrets.SERVER_KEY }}
