--- a/workers/nia-img-pixiv-proxy/wrangler.toml
+++ b/workers/nia-img-pixiv-proxy/wrangler.toml
@@ -1,5 +1,5 @@
 name = "nia-img-pixiv-proxy"
-main = "src/index.ts"
+main = "src/worker.ts"
 compatibility_date = "2023-10-02"
 usage_model = "bundled"
 env = { }
