--- a/web/package.json
+++ b/web/package.json
@@ -17,8 +17,8 @@
     "@kangc/v-md-editor": "^2.3.17",
     "ant-design-vue": "4.x",
     "axios": "^1.5.1",
-    "dynamic-tencent-captcha": "^1.0.2",
     "markdown-it": "^13.0.2",
+    "nia-captcha": "^1.0.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
