--- a/daemon/package.json
+++ b/daemon/package.json
@@ -11,10 +11,8 @@
         "lint": "eslint .",
         "format": "prettier --write --cache .",
         "dev": "nodemon -x node --no-warnings --experimental-specifier-resolution=node --loader ts-node/esm src/app.ts",
-        "build": "npx eslint . && npx tsc --module esnext",
+        "build": "npx eslint . && npx ts-node-esm --experimental-specifier-resolution=node ./script/build.ts",
         "build:nolint": "npx ts-node ./script/build.ts",
-        "build:tsc": "npx tsc",
-        "build:lint": "npx eslint . && ts-node ./script/build.ts",
         "start": "yarn start:ts",
         "start:ts": "ts-node-esm --experimental-specifier-resolution=node src/app.ts",
         "start:node": "node --es-module-specifier-resolution=node dist/app.js"
