--- a/proxy/package.json
+++ b/proxy/package.json
@@ -9,13 +9,14 @@
         "start": "yarn start:ts",
         "start:ts": "ts-node-esm --experimental-specifier-resolution=node src/app.ts",
         "start:node": "node --es-module-specifier-resolution=node dist/app.js",
-        "build": "npx tsc --module esnext"
+        "build": "npx eslint . && npx ts-node-esm --experimental-specifier-resolution=node ./script/build.ts"
     },
     "devDependencies": {
         "@types/cors": "^2.8.15",
         "@types/express": "^4.17.20",
         "@types/node": "^20.8.7",
         "@types/tunnel": "^0.0.5",
+        "@types/shelljs": "^0.8.12",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
     },
@@ -25,6 +26,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "tunnel": "^0.0.6",
-        "yaml": "^2.3.3"
+        "yaml": "^2.3.3",
+        "shelljs": "^0.8.5"
     }
 }
