--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,20 +44,18 @@ jobs:
                   yarn build
                   cd ..
                   cp ./package.json ./dist
-                  cp -r ./service/dist ./dist/service
+                  cp -r ./service/dist/out ./dist/service
                   cp -r ./web/dist ./dist/web
                   cp ./web/package.json ./dist/web
-                  cp ./service/package.json ./dist/service
-                  cp -r ./service/template ./dist/service
 
             - name: 上传前端文件
-              uses: actions/upload-artifact@v2
+              uses: actions/upload-artifact@v3
               with:
                   name: frontend-build
                   path: dist/web/
 
             - name: 上传后端文件
-              uses: actions/upload-artifact@v2
+              uses: actions/upload-artifact@v3
               with:
                   name: service-build
                   path: dist/service
