--- a/daemon/package.json
+++ b/daemon/package.json
@@ -25,6 +25,7 @@
         "@types/shelljs": "^0.8.12",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
+        "@vercel/ncc": "^0.38.1",
         "eslint": "^8.44.0",
         "lint-staged": "^13.2.2",
         "nodemon": "^2.0.22",
