--- a/proxy/package.json
+++ b/proxy/package.json
@@ -15,8 +15,9 @@
         "@types/cors": "^2.8.15",
         "@types/express": "^4.17.20",
         "@types/node": "^20.8.7",
-        "@types/tunnel": "^0.0.5",
         "@types/shelljs": "^0.8.12",
+        "@types/tunnel": "^0.0.5",
+        "@vercel/ncc": "^0.38.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
     },
@@ -25,8 +26,8 @@
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "shelljs": "^0.8.5",
         "tunnel": "^0.0.6",
-        "yaml": "^2.3.3",
-        "shelljs": "^0.8.5"
+        "yaml": "^2.3.3"
     }
 }
