--- a/proxy/package.json
+++ b/proxy/package.json
@@ -17,7 +17,10 @@
         "@types/node": "^20.8.7",
         "@types/shelljs": "^0.8.12",
         "@types/tunnel": "^0.0.5",
+        "@typescript-eslint/eslint-plugin": "^6.13.1",
+        "@typescript-eslint/parser": "^6.13.1",
         "@vercel/ncc": "^0.38.1",
+        "eslint": "^8.55.0",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
     },
